# caterpie-rs

./: .gitignore  Cargo.toml
config/: log4rs.yaml
src/: main.rs
src/commands/: dev.rs  leaderboard.rs  mod.rs  ping.rs  submit.rs  verify.rs
src/entities/: actions.rs  mod.rs  prelude.rs
src/interactions/: mod.rs
src/interactions/selectmenus/: leaderboard.rs
src/utils/: config.rs  issues.rs  mod.rs  ui.rs
