[package]
name = "caterpie-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.28"
serenity = { version = "0.12", "features" = [ "collector" ]}
log = "0.4"
log4rs = "1.3"
sea-orm = { version = "^1.1.0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
octocrab = "0.44.1"
regex = "1.11.1"
chrono = "0.4.41"
serde = { version = "1.0.219", features = [ "derive" ]}
serde_json = "1.0.140"
